index && help-page resp profireader

--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -1122,11 +1122,12 @@ body {
   .menu-site .dropdown:hover .dropbtn {
     color: #fff;
   }
-  body {
-    padding-top: 150px;
-  }
   .company-portal a {
     float: none;
+  }
+  .block-resp {
+    margin-right: 15px;
+    margin-left: 15px;
   }
 }
 /*# sourceMappingURL=style.css.map */
