--- a/profapp/templates/partials/Profireader_content.html
+++ b/profapp/templates/partials/Profireader_content.html
@@ -6,7 +6,7 @@
                 {{ __('index top text about profireader') }}
             </div>
         </div>
-        <div class="row">
+        <div class="row block-resp">
             <a href="{{ url_for('general.send_email_create_portal') }}">
             <div pr-test="CreatePortal" class="col-lg-6 col-md-6 col-sm-6 col-xs-12 index-links">
                 <span><i class="fa fa-pencil fa-3x"></i></span>
