--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -1263,7 +1263,6 @@ body {
     }
     li {
       display: block;
-
     }
     span {
       display: inline-block;
@@ -1296,7 +1295,7 @@ body {
       position: static;
       a {
         padding: 0;
-        &:hover{
+        &:hover {
           background-color: transparent;
         }
       }
@@ -1306,12 +1305,11 @@ body {
     }
   }
 
-  body {
-    padding-top: 150px;
-  }
-
   .company-portal a {
     float: none;
   }
-
+.block-resp{
+  margin-right: 15px;
+  margin-left: 15px;
+}
 }
