--- a/profapp/templates/general/send_email_create_portal.html
+++ b/profapp/templates/general/send_email_create_portal.html
@@ -25,7 +25,7 @@
         };
 
     </script>
-    <div id="send_email_wrapper" ng-cloak>
+    <div id="send_email_wrapper" class="block-resp" ng-cloak>
         <label for="send_message_text">{{ _('Send message to profireader') }}</label></br>
 <textarea id='send_message_text'
           style="width: 500px; height: 200px">{{ _('Default input text') }}
