portals_list resp profireader

--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -1129,5 +1129,18 @@ body {
     margin-right: 15px;
     margin-left: 15px;
   }
+  .btn-search-portal {
+    margin-bottom: 10px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .block-portal .subscribe-portal-logo {
+    margin-left: 50%;
+    margin-top: 10px;
+  }
+  .block-portal .portal-block-resp {
+    width: 100%;
+    text-align: center;
+  }
 }
 /*# sourceMappingURL=style.css.map */
