--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -1308,8 +1308,26 @@ body {
   .company-portal a {
     float: none;
   }
-.block-resp{
-  margin-right: 15px;
-  margin-left: 15px;
+
+  .block-resp {
+    margin-right: 15px;
+    margin-left: 15px;
+  }
+
+  .btn-search-portal {
+    margin-bottom: 10px;
+  }
 }
+
+@media screen and (max-width: 500px) {
+  .block-portal {
+    .subscribe-portal-logo {
+      margin-left: 50%;
+      margin-top: 10px;
+    }
+    .portal-block-resp {
+      width: 100%;
+      text-align: center;
+    }
+  }
 }
