--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -1223,7 +1223,19 @@ body {
     padding: 10px 50px;
   }
 }
-
+/*reset password*/
+.reset-pass{
+    padding: 10px 15px;
+    background-color: @color-btn;
+    border: none;
+    color: #fff;
+  box-shadow: @shadow;
+  &:hover{
+  background-color: @color-btn-hover;
+    transition: @transition;
+    box-shadow: @shadow-hover;
+}
+}
 /* ---MEDIA--- */
 @media screen and (max-width: 1024px) {
   /* Specific to this particular image */
