--- a/profapp/templates/auth/reset_password.html
+++ b/profapp/templates/auth/reset_password.html
@@ -25,7 +25,7 @@
     });
 </script>
     {% raw %}
-    <div class="reset row" ng-controller="resetpassword">
+    <div class="reset row block-resp" ng-controller="resetpassword">
         <div class="link-page" ng-cloak>
             <h5>{{ _('Reset Your Password') }}</h5>
         </div>
@@ -37,7 +37,7 @@
                     <div ng-show="formEmail.email.$error.pattern" class="error-input">{{ _('The
                         email not validate!') }}
                     </div>
-                    <button pr-test="SendMessage" class="col-lg-3 col-md-3 col-sm-3 col-xs-12 pull-right"
+                    <button pr-test="SendMessage" class="reset-pass col-lg-3 col-md-3 col-sm-3 col-xs-12 pull-right"
                             ng-click="sendMessage(email)"
                             ng-disabled="isDisabled || formEmail.email.$error.pattern" type="submit">{{ _('Reset password') }}</button>
                 </form>
