--- a/profapp/templates/_ruslan/reader/_reader_content.html
+++ b/profapp/templates/_ruslan/reader/_reader_content.html
@@ -78,12 +78,12 @@
                         <p>{{ article.short}}</p>
                 </h3>
                     <div class="row liked-favorite-band">
-                        <ul style="list-style: none; border-top: 1px solid #E3E3E3; padding-top: 15px;">
-                            <li style="display: inline-block; margin-right: 85px; cursor: pointer" ng-click="add_to_favorite(article)"><i ng-if="!article.is_favorite" class="fa fa-bookmark-o"></i><i ng-if="article.is_favorite" class="fa fa-bookmark"></i>
+                        <ul>
+                            <li ng-click="add_to_favorite(article)"><i ng-if="!article.is_favorite" class="fa fa-bookmark-o"></i><i ng-if="article.is_favorite" class="fa fa-bookmark"></i>
                              {{_('Favorite') }}</li>
-                            <li class="liked" style=" display: inline-block; margin-right: 85px;cursor: pointer" ng-click="like(article)" popover-trigger="mouseenter" popover-placement="top" uib-popover-html="getPopoverContent(article.list_liked_reader)"><i class="fa fa-thumbs-o-up"></i>{{ article.liked }}</li>
-                            <li style=" display: inline-block; margin-right: 85px;"><i class="fa fa-comments-o"></i>604</li>
-                            <li style=" display: inline-block; margin-right: 30px;"><i class="fa fa-share"></i>{{ _('Share') }}</li>
+                            <li class="liked" ng-click="like(article)" popover-trigger="mouseenter" popover-placement="top" uib-popover-html="getPopoverContent(article.list_liked_reader)"><i class="fa fa-thumbs-o-up"></i>{{ article.liked }}</li>
+                            <li><i class="fa fa-comments-o"></i>604</li>
+                            <li><i class="fa fa-share"></i>{{ _('Share') }}</li>
                         </ul>
                     </div>
                     <div class="item-additional-info">
