reader_content resp profireader

--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -1158,6 +1158,9 @@ body {
   .btn-search-portal {
     margin-bottom: 10px;
   }
+  .company-thumbnail img {
+    margin-top: 10px;
+  }
 }
 @media screen and (max-width: 500px) {
   .block-portal .subscribe-portal-logo {
@@ -1176,6 +1179,9 @@ body {
   }
   .reader-content h3 {
     font-size: 20px;
+  }
+  .join-new-company button {
+    width: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
