--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -1346,6 +1346,9 @@ body {
   .btn-search-portal {
     margin-bottom: 10px;
   }
+  .company-thumbnail img{
+    margin-top: 10px;
+  }
 }
 
 @media screen and (max-width: 500px) {
@@ -1371,5 +1374,8 @@ body {
     h3 {
       font-size: 20px;
     }
+  }
+  .join-new-company button{
+    width: 100%;
   }
 }
