--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -84,15 +84,19 @@
     <div class="container" ng-init="loadData()" ng-controller="companies_list" ng-cloak>
         <div class="row join-company">
             <div class="col-lg-3 create-company pull-right">
-                <button pr-test="CreateNewCompany" class="btn btn-default" type="button" ng-click='createCompany()'><div>{{
-                    _('Create new company') }}</div>
+                <button pr-test="CreateNewCompany" class="btn btn-default" type="button" ng-click='createCompany()'>
+                    <div>{{
+                        _('Create new company') }}
+                    </div>
                 </button>
             </div>
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
                 <div class="row">
                     <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12">
-                        <h3><div>{{ _('Join to company') }}</div></h3>
+                        <h3>
+                            <div>{{ _('Join to company') }}</div>
+                        </h3>
                     </div>
                     <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12 search-company">
                         <div class="input-group" style="width: 100%">
@@ -123,13 +127,13 @@
                     </a>
                 </div>
 
-                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-4">
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
                     <h4 pr-test="SearchCompanyArticle" id="com_n">{{ company.name }}</h4>
                     <p ng-bind-html="company.short_description"></p>
                     <a pr-test="CompanyOwnPortal" ng-if="company.own_portal" href="http://{{ company.own_portal.host }}"
                        title="http://{{ company.own_portal.host }}">{{ _('PORTAL') }}</a>
                 </div>
-                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 join-new-company">
+                <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12 join-new-company">
                     <button pr-test="JoinToCompany" class="btn btn-default" type="button"
                             ng-click="joinToCompany(company.id)"
                             ng-class="{'disabled': selectedCompany_sending}"
@@ -142,10 +146,15 @@
                                                                                                     ng-click="show_more()">{{
             _('Show more search results') }}</a></h4></div>
         <div class="row company-list">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12"><h3 ng-if="data.companies.length>0"><div>{{ _('Your company list') }}:</div></h3>
-                <h2 ng-if="data.companies.length===0 && !loading"><div>{{ _('You haven\'t got any company yet!Create own or join to!') }}</div></h2>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h3 ng-if="data.companies.length>0">
+                    <div>{{ _('Your company list') }}:</div>
+                </h3>
+                <h2 ng-if="data.companies.length===0 && !loading">
+                    <div>{{ _('You haven\'t got any company yet!Create own or join to!') }}</div>
+                </h2>
             </div>
-            <div ng-if="data.companies" class="col-lg-4 col-md-4 col-sm-6 col-xs-6"
+            <div ng-if="data.companies" class="col-lg-4 col-md-4 col-sm-6 col-xs-12"
                  ng-repeat="my_employer in data.companies" id="joined_company_{{ my_employer.id }}">
                 <div class="thumbnail company-thumbnail">
                     <a href="{{ url_company_profile({company_id: my_employer.id}) }}">
@@ -154,7 +163,7 @@
                     <div pr-test="SomeCompanyInfo" class="caption some-company-info">
 
                         <a pr-test="YourCompanyListTitles"
-                               href="{{ url_company_profile({company_id: my_employer.id}) }}"><h3 class="ellipsis">
+                           href="{{ url_company_profile({company_id: my_employer.id}) }}"><h3 class="ellipsis">
                             {{ _('%(name)s' , my_employer) }}
                         </h3></a>
                         <p pr-test="JoinedCompany">{{ _((my_employer.author_user_id==data.user_id? ' Type: OWN
