user profile resp profireader

--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -920,6 +920,7 @@ body {
 }
 
 .edit-grup {
+  padding-left: 360px;
   .input-group {
     margin-bottom: 5px;
   }
@@ -956,6 +957,11 @@ body {
 
     }
   }
+
+}
+
+.profile-thumbnail {
+  position: absolute;
 }
 
 .add-division-style {
@@ -1281,7 +1287,12 @@ body {
   .edit-company button {
     text-align: center;
   }
-
+  .edit-grup{
+    width: 100%;
+    margin-top: 364px;
+    margin-left: 10px;
+    padding: 0;
+  }
 }
 
 @media screen and (max-width: 764px) {
@@ -1346,7 +1357,8 @@ body {
   .btn-search-portal {
     margin-bottom: 10px;
   }
-  .company-thumbnail img{
+
+  .company-thumbnail img {
     margin-top: 10px;
   }
 }
@@ -1375,7 +1387,8 @@ body {
       font-size: 20px;
     }
   }
-  .join-new-company button{
+
+  .join-new-company button {
     width: 100%;
   }
 }
