--- a/profapp/templates/general/user_edit_profile.html
+++ b/profapp/templates/general/user_edit_profile.html
@@ -46,11 +46,11 @@
             </div>
 
             <div class="row">
-                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 profile-thumbnail">
+                <div class="profile-thumbnail">
                     <div style="width: 100%; height: 300px; position: relative" pr-crop="data.user.avatar"></div>
                 </div>
 
-                <form name="formUser" class="col-lg-8 col-md-8 col-sm-8 col-xs-8 edit-grup">
+                <form name="formUser" class="edit-grup">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 input-group input-group-sm ">
                         <span class="input-group-addon" id="sizing-addon1">{{ _('Your first name') }}</span>
                         <input pr-validation-answer="data_validation:profireader_first_name" class="form-control"
