--- a/profapp/templates/general/user_profile.html
+++ b/profapp/templates/general/user_profile.html
@@ -13,7 +13,7 @@
 </script>
     {{ raw }}
     <div class="container" ng-controller="user_profile" ng-cloak>
-        <div class="row link-page"><h5>{{ _('User profile') }}</h5>
+        <div class="row block-resp link-page"><h5>{{ _('User profile') }}</h5>
             <a title="edit" pr_test="EditProfile" href="{{ url_for('user.edit_profile', user_id=user.id) }}">
                 <i class="fa fa-pencil fa-2x"></i>
             </a>
