--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -779,6 +779,9 @@ body {
 .profile-window span {
   word-wrap: break-word;
 }
+.edit-grup {
+  padding-left: 360px;
+}
 .edit-grup .input-group {
   margin-bottom: 5px;
 }
@@ -814,6 +817,9 @@ body {
 .edit-grup .item input[type=submit]:hover {
   background-color: #00e676;
   transition: all 0.2s ease-out;
+}
+.profile-thumbnail {
+  position: absolute;
 }
 .add-division-style {
   margin-top: 15px;
@@ -1101,6 +1107,12 @@ body {
   }
   .edit-company button {
     text-align: center;
+  }
+  .edit-grup {
+    width: 100%;
+    margin-top: 364px;
+    margin-left: 10px;
+    padding: 0;
   }
 }
 @media screen and (max-width: 764px) {
