add translate functionality into filemanager

--- a/profapp/templates/filemanager.html
+++ b/profapp/templates/filemanager.html
@@ -19,6 +19,7 @@
         var file_manager_default_action = '{{ file_manager_default_action|safe }}';
         var last_visit_root = '{{ last_visit_root|safe }}';
         var last_root_id = '{{ last_root_id|safe }}';
+        var translates = {{ translates('FileManagerCtrl')|safe }};
 
     </script>
 
