--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -110,6 +110,10 @@ body {
   transition: all 0.2s ease-out;
   padding: 15px;
 }
+.menu-company-img {
+  height: 60px;
+  margin-top: -20px;
+}
 .menu-company .selected {
   color: #fff;
   text-decoration: none;
@@ -507,7 +511,7 @@ body {
 }
 .company .edit-company button {
   width: 115px;
-  padding: 0;
+  padding: 5px 15px;
   margin-left: 25px;
   margin-right: -15px;
 }
@@ -526,6 +530,7 @@ body {
   background-color: #CA2027;
   border-color: #CA2027;
   color: #fff;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 .save-profile {
   background-color: #00c853;
@@ -551,6 +556,7 @@ body {
 .go-portal:active {
   background-color: #00ceb1;
   border-color: #00ceb1;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   color: #fff;
 }
 .edit-data {
@@ -570,13 +576,13 @@ body {
 .about-company-text p {
   color: #555;
 }
-.image-company-profile img {
-  width: 100%;
-}
 /* ---Reader-list--- */
 .reader-list-nav {
   border-bottom: 1px solid #212121;
   padding-bottom: 8px;
+}
+.reader-list-nav a {
+  display: inline !important;
 }
 .reader-list-nav li {
   display: inline;
@@ -722,13 +728,6 @@ body {
 }
 .center {
   text-align: center;
-}
-.name-subscriptions h5 {
-  background-color: #00BBA1;
-  color: #fff;
-  float: left;
-  padding: 10px;
-  border-radius: 3px;
 }
 /* ---USER--- */
 .link-page i {
@@ -970,7 +969,7 @@ body {
   color: #fff;
   border: 0;
   border-radius: 3px;
-  padding: 5px 15px;
+  padding: 5px 35px;
 }
 /* --- MESSENGER --- */
 .search-friends {
@@ -1037,7 +1036,7 @@ body {
   padding: 5px 15px;
 }
 .mess-bg {
-  background-image: url('/static/images/develop-img.jpeg');
+  background-image: url("/static/images/develop-img.jpeg");
   min-height: 100%;
   min-width: 1024px;
   width: 100%;
@@ -1101,7 +1100,7 @@ body {
     margin-right: 0;
   }
   .company-portal {
-    margin-top: 40px;
+    margin-top: 5px;
     text-align: center;
     margin-bottom: 15px;
   }
@@ -1113,6 +1112,22 @@ body {
     margin-top: 364px;
     margin-left: 10px;
     padding: 0;
+  }
+  .edit-grup .save-profile {
+    width: 100%;
+  }
+  .menu-company-img {
+    margin-top: -30px;
+  }
+  .menu-company a {
+    display: block;
+    padding: 5px;
+  }
+  .menu-company a:hover {
+    padding: 5px;
+  }
+  .menu-company .selected {
+    padding: 5px;
   }
 }
 @media screen and (max-width: 764px) {
@@ -1126,6 +1141,8 @@ body {
   .menu-site span {
     display: inline-block;
     font-size: 18px;
+    padding: 6px;
+    border-bottom: 1px solid #212121;
   }
   .menu-site span:hover {
     border-bottom: 1px solid #00BBA1;
@@ -1141,7 +1158,7 @@ body {
   .menu-site .menu-profile .login-profile {
     position: absolute;
     top: 10px;
-    right: 25px;
+    right: 35px;
   }
   .menu-site .dropbtn {
     padding-left: 0;
@@ -1160,6 +1177,12 @@ body {
   .menu-site .dropdown:hover .dropbtn {
     color: #fff;
   }
+  .serch-portal h3 {
+    font-size: 22px;
+  }
+  .edit-block {
+    margin-top: 70px;
+  }
   .company-portal a {
     float: none;
   }
@@ -1172,6 +1195,12 @@ body {
   }
   .company-thumbnail img {
     margin-top: 10px;
+  }
+  .help-page button {
+    width: 100%;
+  }
+  .image-company-profile {
+    margin-top: 30px;
   }
 }
 @media screen and (max-width: 500px) {
@@ -1194,6 +1223,9 @@ body {
   }
   .join-new-company button {
     width: 100%;
+  }
+  .help-page {
+    margin-top: 20%;
   }
 }
 /*# sourceMappingURL=style.css.map */
