--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -77,7 +77,6 @@
             $ok('{{ url_for('user.change_language') }}', {'language': lang}, function(resp) {
                 location.reload();
             });
-            console.log(lang)
         }
 
         $scope.selected_user_menu = '';
@@ -90,7 +89,7 @@
 
 </script>
 {% raw %}
-<nav ng-init="tos()" ng-controller="UserLoginController" class="navbar navbar-fixed-top nav-bg">
+<nav ng-controller="UserLoginController" class="navbar navbar-fixed-top nav-bg">
     <div class="container" ng-cloak>
 
         <div class="row">
@@ -153,9 +152,7 @@
                     </ul>
                 </div>
             </div>
-            </ul>
         </div>
-    </div>
     </div>
 </nav>
 {% endraw %}
