--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -766,8 +766,8 @@ body {
     }
     li {
       display: inline-block;
-      margin-right: 85px;
       cursor: pointer;
+      margin-left: 25px;
     }
     i {
       margin-right: 5px;
@@ -1435,12 +1435,7 @@ body {
     width: 45px;
   }
 
-  .reader-content {
-    .liked-favorite-band ul {
-      text-align: center;
-    }
 
-  }
 
   .join-new-company button {
     width: 100%;
