--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -473,13 +473,32 @@ body {
 .company-list {
   margin-top: 30px;
 }
-.company-list h2 {
+.company-list h3 {
   color: #383838;
   margin-bottom: 15px;
+  margin-left: -15px;
 }
 .company-list h4 {
   text-align: center;
   color: #C70000;
+}
+.company-list i {
+  margin-top: 30px;
+  margin-left: 15px;
+}
+.list-company {
+  border: 1px solid #F5EFEF;
+  background-color: #FFFDFD;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  margin-bottom: 10px;
+}
+.list-company:hover {
+  background-color: #EFEFEF;
+  transition: all 0.2s ease-out;
+  box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.list-company p {
+  color: #00BBA1;
 }
 .company-thumbnail {
   border-radius: 3px;
@@ -1087,7 +1106,6 @@ body {
 }
 /* ---MEDIA--- */
 @media screen and (max-width: 1024px) {
-  /* Specific to this particular image */
   .mess-bg {
     left: 50%;
     margin-left: -512px;
