--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -118,6 +118,7 @@
                 <h3>{{ _('Oops! Nothing found!') }}</h3>
             </div>
         </div>
+
         <div class="list_search_company" ng-repeat="company in data_search.company_list" ng-if="selectedCompany_name">
             <div class="row search-result thumbnail">
                 <div class="col-lg-2 col-md-2 col-sm-2 col-xs-4 photo-search">
@@ -142,18 +143,39 @@
                 </div>
             </div>
         </div>
+
         <div ng-if="data_search.company_list.length>0 && !data_search.end" class="show-more"><h4><a class="link"
                                                                                                     ng-click="show_more()">{{
             _('Show more search results') }}</a></h4></div>
         <div class="row company-list">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h3 ng-if="data.companies.length>0">
-                    <div>{{ _('Your company list') }}:</div>
-                </h3>
-                <h2 ng-if="data.companies.length===0 && !loading">
-                    <div>{{ _('You haven\'t got any company yet!Create own or join to!') }}</div>
-                </h2>
+                <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+                    <h3 ng-if="data.companies.length>0">
+                        <div>{{ _('Your company list') }}:</div>
+                    </h3>
+                    <h3 ng-if="data.companies.length===0 && !loading">
+                        <div>{{ _('You haven\'t got any company yet!Create own or join to!') }}</div>
+                    </h3>
+                </div>
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                    <a href="#"><i class="fa fa-list pull-right" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-th-large pull-right" aria-hidden="true"></i></a>
+                </div>
             </div>
+
+            <a href="#">
+                <div ng-if="data.companies" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list-company"
+                     ng-repeat="my_employer in data.companies" id="joined_company_{{ my_employer.id }}">
+                    <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
+                        <img pr-image="my_employer.logo_file_id" alt="image" style="width: 100%;">
+                    </div>
+                    <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
+                        <p class="ellipsis">{{ _('%(name)s' , my_employer) }}</p>
+                    </div>
+                </div>
+            </a>
+
+
             <div ng-if="data.companies" class="col-lg-4 col-md-4 col-sm-6 col-xs-12"
                  ng-repeat="my_employer in data.companies" id="joined_company_{{ my_employer.id }}">
                 <div class="thumbnail company-thumbnail">
@@ -163,9 +185,9 @@
                     <div pr-test="SomeCompanyInfo" class="caption some-company-info">
 
                         <a pr-test="YourCompanyListTitles"
-                           href="{{ url_company_profile({company_id: my_employer.id}) }}"><h3 class="ellipsis">
-                            {{ _('%(name)s' , my_employer) }}
-                        </h3></a>
+                           href="{{ url_company_profile({company_id: my_employer.id}) }}">
+                            <h3 class="ellipsis">{{ _('%(name)s' , my_employer) }}</h3>
+                        </a>
                         <p pr-test="JoinedCompany">{{ _((my_employer.author_user_id==data.user_id? ' Type: OWN
                             COMPANY':'JOINED COMPANY') ,
                             my_employer) }}</p>
