--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -582,17 +582,20 @@ body {
 }
 
 .list-company {
-  border: 1px solid #F5EFEF;
-  background-color: #FFFDFD;
-  box-shadow: @shadow;
-  margin-bottom: 10px;
+  border: 1px solid #fff;
+  background-color: #F9F9F9;
+  color: #000000;
+  margin-bottom: 3px;
   &:hover {
-    background-color: #EFEFEF;
+    background-color: #fff;
     transition: @transition;
-    box-shadow: @shadow-hover;
+    box-shadow: @shadow;
   }
-  p {
+  h5 {
     color: @color-links;
+  }
+  a{
+    color: inherit;
   }
 }
 
