--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -163,17 +163,28 @@
                 </div>
             </div>
 
-            <a href="#">
-                <div ng-if="data.companies" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list-company"
-                     ng-repeat="my_employer in data.companies" id="joined_company_{{ my_employer.id }}">
+
+            <div ng-if="data.companies" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list-company"
+                 ng-repeat="my_employer in data.companies" id="joined_company_{{ my_employer.id }}">
+                <a href="{{ url_company_profile({company_id: my_employer.id}) }}">
                     <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
                         <img pr-image="my_employer.logo_file_id" alt="image" style="width: 100%;">
                     </div>
                     <div class="col-lg-10 col-md-10 col-sm-10 col-xs-10">
-                        <p class="ellipsis">{{ _('%(name)s' , my_employer) }}</p>
+                        <h5 class="ellipsis">{{ _('%(name)s' , my_employer) }}</h5>
+                        <p>{{ _((my_employer.author_user_id==data.user_id? 'OWN
+                            COMPANY':'JOINED COMPANY') ,
+                            my_employer) }}</p>
+                        <span ng-if="!my_employer.own_portal.host"><b>{{_('Portals')}}: </b>{{_('No')}}</span>
+                        <div ng-if="my_employer.own_portal.host">
+                            <button class="btn btn-default" type="button"
+                                    ng-click="goToPortal(my_employer.own_portal.host)">{{ _("Go to portal") }}
+                            </button>
+                        </div>
                     </div>
-                </div>
-            </a>
+                </a>
+
+            </div>
 
 
             <div ng-if="data.companies" class="col-lg-4 col-md-4 col-sm-6 col-xs-12"
