--- a/profapp/templates/filemanager.html
+++ b/profapp/templates/filemanager.html
@@ -37,7 +37,9 @@
 {%- endblock head %}
 
 {% block navbar %}
+    {% if file_manager_called_for == "" %}
     {% include '_ruslan/partials/_user_menu.html' %}
+    {% endif %}
 {% endblock navbar %}
 
 {% block content %}
