--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -499,10 +499,24 @@ body {
 .list-company a {
   color: inherit;
 }
+.list-company button {
+  padding: 5px;
+  background-color: #00BBA1;
+  color: #fff;
+  border-radius: 3px;
+}
 .list-company p,
 .list-company button {
-  float: right;
   z-index: 100;
+  font-size: 13px;
+}
+.list-company .join-own {
+  background-color: #A7E6F5;
+  display: inline-block;
+  padding: 5px 15px;
+  border-radius: 5px;
+  color: #383838;
+  margin-top: 15px;
 }
 .company-thumbnail {
   border-radius: 3px;
