--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -596,9 +596,24 @@ body {
   a {
     color: inherit;
   }
-  p, button{
-    float: right;
+  button {
+    padding: 5px;
+    background-color: #00BBA1;
+    color: #fff;
+    border-radius: 3px;
+  }
+  p, button {
+    //float: right;
     z-index: 100;
+    font-size: 13px;
+  }
+  .join-own {
+    background-color: #A7E6F5;
+    display: inline-block;
+    padding: 5px 15px;
+    border-radius: 5px;
+    color: #383838;
+    margin-top: 15px;
   }
 }
 
