--- a/profapp/templates/company/companies.html
+++ b/profapp/templates/company/companies.html
@@ -163,7 +163,7 @@
                 </div>
             </div>
 
-
+{# LIST COMPANIES #}
             <div ng-if="data.companies" class="col-lg-12 col-md-12 col-sm-12 col-xs-12 list-company"
                  ng-repeat="my_employer in data.companies" id="joined_company_{{ my_employer.id }}">
                 <a href="{{ url_company_profile({company_id: my_employer.id}) }}">
@@ -174,19 +174,19 @@
                         <h5 class="ellipsis">{{ _('%(name)s' , my_employer) }}</h5>
                     </div>
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
-                        <p>{{ _((my_employer.author_user_id==data.user_id? 'own':'joined') ,
+                        <p class="join-own">{{ _((my_employer.author_user_id==data.user_id? 'own':'joined') ,
                             my_employer) }}</p>
                     </div>
                     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2">
                         <p ng-if="!my_employer.own_portal.host">{{_('Portals')}}: {{_('No')}}</p>
-                        <button class="btn btn-default" ng-if="my_employer.own_portal.host" type="button"
+                        <button class="btn" ng-if="my_employer.own_portal.host" type="button"
                                 ng-click="goToPortal(my_employer.own_portal.host)">
                             {{_("Go to portal") }}
                         </button>
                     </div>
                 </a>
-
             </div>
+{# LIST COMPANIES END #}
 
 
             <div ng-if="data.companies" class="col-lg-4 col-md-4 col-sm-6 col-xs-12"
