--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -513,10 +513,13 @@ body {
 .list-company .join-own {
   background-color: #A7E6F5;
   display: inline-block;
-  padding: 5px 15px;
+  padding: 3px 15px;
   border-radius: 5px;
   color: #383838;
-  margin-top: 15px;
+}
+.list-company .portal {
+  margin-top: 20px;
+  float: right;
 }
 .company-thumbnail {
   border-radius: 3px;
