--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -610,10 +610,13 @@ body {
   .join-own {
     background-color: #A7E6F5;
     display: inline-block;
-    padding: 5px 15px;
+    padding: 3px 15px;
     border-radius: 5px;
     color: #383838;
-    margin-top: 15px;
+  }
+  .portal{
+    margin-top: 20px;
+    float: right;
   }
 }
 
