--- a/profapp/templates/filemanager.html
+++ b/profapp/templates/filemanager.html
@@ -1,4 +1,5 @@
 {% extends "index_lazy_layout.html" %}
+{% block title %}{{ _('Profireader filemanager') }}{% endblock %}
 {% block head %}
     {{ super() }}
     <script>
